Update launch-patient.html with new standalone id
updates the client_id with the standalone Client-id

--- a/example-smart-app/launch-patient.html
+++ b/example-smart-app/launch-patient.html
@@ -26,7 +26,7 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
-        'client_id': 'CLIENT_ID_HERE',
+        'client_id': 'ecbe93f2-12e9-46f9-95f6-3b5f7f5d6e08',
         'scope':  'patient/Patient.read patient/Observation.read launch/patient online_access openid profile'
       });
     </script>
