--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -20,7 +20,7 @@
       <div class="bounce3"></div>
     </div>
     <div id='holder' >
-      <h2>Example-SMART-App</h2>
+      <h2>Example-SMART-App From App Dev With Patient Scope ONLY</h2>
 
       <h2>Patient Resource</h2>
       <table>
