--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -111,7 +111,7 @@ success: function (result) {
 $("#newdata").html(result)
 },
 error: function (result) {
-alert(result);
+alert("error");
 }
   });
 });
