--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -118,6 +118,7 @@ alert("error");
       
 </script>
     <hr/>
+    Test google Image: <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"/>
     <div id="newdata"></div>
     
   </body>
