--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -12,7 +12,7 @@
     -->
   </head>
   <body>
-    <img src="https://gillettechildrens.sharepoint.com/_api/v2.1/sites/gillettechildrens.sharepoint.com,46aa1946-85bd-411d-8483-a08150454f82,316a5275-5138-4ec9-9ba9-245800bfa851/lists/f5caae21-5b6d-4e67-980a-091fa6720b63/items/687dc69f-7ec9-49fa-ba58-55c9c0439fa1/driveItem/thumbnails/0/c400x99999/content?preferNoRedirect=true&prefer=extendCacheMaxAge&clientType=modernWebPart"/>
+    <img src="https://www.gillettechildrens.org/assets/graphics/gillette-logo-gray.jpg"/>
     <div id='errors'>
     </div>
     <div id="loading" class="spinner">
