--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -6,13 +6,14 @@
     <title>adamgil - Example-SMART-App</title>
 
     <link rel='stylesheet' type='text/css' href='./src/css/example-smart-app.css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!--
       Temporarily disable cerner-smart-embeddable-lib
       <link rel='stylesheet' type='text/css' href='./lib/css/cerner-smart-embeddable-lib-1.0.0.min.css'>
     -->
   </head>
   <body>
-    <img src="https://www.gillettechildrens.org/assets/graphics/gillette-logo-gray.jpg"/>
+    <img src="https://www.gillettechildrens.org/assets/graphics/gillette-logo-gray.jpg" width="250"/>
     <div id='errors'>
     </div>
     <div id="loading" class="spinner">
@@ -21,9 +22,9 @@
       <div class="bounce3"></div>
     </div>
     <div id='holder' >
-      <h2>Example-SMART-App From App Dev With Patient Scope ONLY</h2>
+      <h2>AppDev Demo Smart App</h2>
 
-      <h2>Patient Resource</h2>
+      <h2><i class="bi bi-archive-fill"></i> Patient Resource</h2>
       <table>
         <tr>
           <th>First Name:</th>
